# cmake_test

./: .gitignore  CMakeLists.txt  Makefile  main.c
test/: CMakeLists.txt  Makefile  test_sscanf.c  test_sscanf.h
